--- a/.env.example
+++ b/.env.example
@@ -15,3 +15,5 @@ POSTGRES_URL="postgresql://postgres:password@localhost:5432/next-gallery"
 # Example:
 # SERVERVAR="foo"
 # NEXT_PUBLIC_CLIENTVAR="bar"
+
+# Pull .env, `vercel env pull`
