--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@clerk/nextjs": "^6.9.6",
     "@t3-oss/env-nextjs": "^0.10.1",
+    "@uploadthing/react": "^7.1.5",
     "@vercel/postgres": "^0.10.0",
     "drizzle-orm": "^0.33.0",
     "geist": "^1.3.0",
@@ -23,6 +24,7 @@
     "postgres": "^3.4.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "uploadthing": "^7.4.4",
     "zod": "^3.23.3"
   },
   "devDependencies": {
