--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "next": "15.1.7",
     "next-themes": "^0.4.4",
     "postgres": "^3.4.4",
+    "posthog-js": "^1.223.4",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "server-only": "^0.0.1",
