--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@clerk/nextjs": "^6.9.6",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-slot": "^1.1.2",
+    "@sentry/core": "^9.5.0",
     "@sentry/nextjs": "^8",
     "@t3-oss/env-nextjs": "^0.10.1",
     "@uploadthing/react": "^7.1.5",
@@ -38,6 +39,7 @@
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^7.4.4",
+    "web-push": "^3.6.7",
     "zod": "^3.23.3"
   },
   "devDependencies": {
