--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@sentry/core": "^9.5.0",
     "@sentry/nextjs": "^8",
     "@t3-oss/env-nextjs": "^0.10.1",
+    "@types/web-push": "^3.6.4",
     "@uploadthing/react": "^7.1.5",
     "@vercel/postgres": "^0.10.0",
     "class-variance-authority": "^0.7.1",
