--- a/package.json
+++ b/package.json
@@ -11,14 +11,15 @@
     "db:studio": "drizzle-kit studio",
     "dev": "next dev",
     "lint": "next lint",
-    "start": "next start"
+    "start": "next start",
+    "generate-vapid": "npx web-push generate-vapid-keys"
   },
   "dependencies": {
     "@clerk/nextjs": "^6.9.6",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-slot": "^1.1.2",
     "@sentry/core": "^9.5.0",
-    "@sentry/nextjs": "^8",
+    "@sentry/nextjs": "^9",
     "@t3-oss/env-nextjs": "^0.10.1",
     "@types/web-push": "^3.6.4",
     "@uploadthing/react": "^7.1.5",
