--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dev": "next dev",
     "lint": "next lint",
     "start": "next start",
+    "https": "next dev --experimental-https",
     "generate-vapid": "npx web-push generate-vapid-keys"
   },
   "dependencies": {
