--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "build": "next build",
+    "build": "bun next build",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
     "db:push": "drizzle-kit push",
     "db:studio": "drizzle-kit studio",
-    "dev": "next dev --turbo",
+    "dev": "bun next dev",
     "lint": "next lint",
-    "start": "next start",
+    "start": "bun next start",
     "https": "next dev --experimental-https",
     "generate-vapid": "npx web-push generate-vapid-keys"
   },
@@ -30,20 +30,20 @@
     "drizzle-orm": "^0.33.0",
     "geist": "^1.3.0",
     "lucide-react": "^0.475.0",
-    "next": "15.5.7",
+    "next": "^16.1.1",
     "next-themes": "^0.4.4",
     "postgres": "^3.4.4",
-    "posthog-js": "^1.223.4",
-    "posthog-node": "^4.10.1",
-    "react": "19.2.1",
-    "react-dom": "19.2.1",
+    "posthog-js": "^1.310.1",
+    "posthog-node": "^5.18.0",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "server-only": "^0.0.1",
     "sonner": "^2.0.1",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^7.4.4",
     "web-push": "^3.6.7",
-    "zod": "^3.23.3"
+    "zod": "^4.2.1"
   },
   "devDependencies": {
     "@types/eslint": "^8.56.10",
@@ -64,12 +64,5 @@
   },
   "ct3aMetadata": {
     "initVersion": "7.37.0"
-  },
-  "packageManager": "pnpm@9.12.2",
-  "pnpm": {
-    "overrides": {
-      "@types/react": "19.2.1",
-      "@types/react-dom": "19.2.1"
-    }
   }
 }
